# icfpc2023

./: LICENSE  README.md  cabal.project  flake.nix  progcon.cabal  stack.yaml
.github/workflows/: build.yml
etc/: bash-completion.sh
problems/: 00-problem.json  00-solution.json  01-problem.json  01-solution.json  02-problem.json  02-solution.json  03-problem.json  03-solution.json  04-solution.json  05-problem.json  05-solution.json  06-solution.json  07-problem.json  07-solution.json  08-problem.json  08-solution.json  09-solution.json  10-problem.json  10-solution.json  11-problem.json  11-solution.json  12-problem.json  12-solution.json  13-solution.json  14-problem.json  14-solution.json  15-solution.json  16-solution.json  17-solution.json  18-solution.json  19-problem.json  19-solution.json  20-solution.json  21-problem.json  21-solution.json  22-problem.json  22-solution.json  23-solution.json  24-problem.json  24-solution.json  (+252 more)
progcon-hs/: README.md  progcon.cabal
progcon-hs/app/: Main.hs
progcon-hs/src/: OurLib.hs  ProgCon.hs
progcon-hs/src/ProgCon/: GUI.hs  Parser.hs  Syntax.hs
src/: ProgCon.hs
src/ProgCon/: API.hs  Eval.hs  GUI.hs  Parser.hs  Solve.hs  Submit.hs  Syntax.hs  Utils.hs
