cabal-version:       2.2
name:                progcon
version:             0.1.0
synopsis:            ICFP Programming Contest 2023
description:
        Short paragraph here
license:             MIT
license-file:        LICENSE
author:              JKRT team
maintainer:          JKRT team
copyright:           2023  JKRT team
category:            Unclassified
homepage:            https://github.com/juhp/progcon
bug-reports:         https://github.com/juhp/progcon/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
tested-with:         GHC == 9.2.8
                      || == 9.4.5

source-repository head
  type:                git
  location:            https://github.com/juhp/progcon.git

common common
  default-language:    GHC2021
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    PartialTypeSignatures
    OverloadedStrings
    OverloadedRecordDot

executable progcon
  import:              common
  main-is:             Main.hs
  other-modules:       Paths_progcon
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-qg -with-rtsopts=-xn -with-rtsopts=-A128m -O2
  build-depends:       base < 5,
                       progcon

library
  import:              common
  build-depends:       base < 5
                     , MonadRandom < 3
                     , aeson < 3
                     , async
                     , bytestring < 3
                     , directory < 3
                     , extra
                     , filepath
                     , gloss < 2
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-query
                     , http-types
                     , say
                     , simple-cmd-args
                     , text < 3
                     , time
                     , vector < 3
                     , vector-shuffling < 3

  exposed-modules:     ProgCon
                     , ProgCon.API
                     , ProgCon.Eval
                     , ProgCon.GUI
                     , ProgCon.Parser
                     , ProgCon.Solve
                     , ProgCon.Submit
                     , ProgCon.Syntax
  hs-source-dirs:      src
