cabal-version:       2.2
name:                progcon
version:             0.1.0
synopsis:            ICFP Programming Contest 2023
description:
        Short paragraph here
license:             MIT
license-file:        LICENSE
author:              JKRT team
maintainer:          JKRT team
copyright:           2023  JKRT team
category:            Unclassified
homepage:            https://github.com/juhp/progcon
bug-reports:         https://github.com/juhp/progcon/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
tested-with:         GHC == 9.2.8
                      || == 9.4.5

source-repository head
  type:                git
  location:            https://github.com/juhp/progcon.git

executable progcon
  main-is:             Main.hs
  other-modules:       Paths_progcon
  hs-source-dirs:      app
  build-depends:       base < 5,
                       progcon
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

library
  build-depends:       base < 5
  default-language:    Haskell2010
  exposed-modules:     OurLib
  hs-source-dirs:      src

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
