cabal-version:       2.2
name:                progcon
version:             0.1.0
synopsis:            ICFP Programming Contest 2023
description:
        Short paragraph here
license:             MIT
license-file:        LICENSE
author:              JKRT team
maintainer:          JKRT team
copyright:           2023  JKRT team
category:            Unclassified
homepage:            https://github.com/juhp/progcon
bug-reports:         https://github.com/juhp/progcon/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
tested-with:         GHC == 9.2.8
                      || == 9.4.5

source-repository head
  type:                git
  location:            https://github.com/juhp/progcon.git

common common
  default-language:    GHC2021
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    PartialTypeSignatures
    OverloadedStrings
    OverloadedRecordDot

executable progcon
  import:              common
  main-is:             Main.hs
  other-modules:       Paths_progcon
  hs-source-dirs:      app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-T
  build-depends:       base < 5,
                       progcon

library
  import:              common
  build-depends:       base < 5
                       -- base enhancement
                     , rio < 2
                     , lens < 6
                     , unliftio < 2
                     , managed < 2
                     , mtl < 3
                     , transformers < 2
                     , text < 3
                     , witch < 2
                       -- image
                     , vector < 2
                     , massiv < 2
                     , massiv-io < 2
                     , Color < 2
                     , JuicyPixels < 4
                       -- drawing
                     , sdl2 < 3
                     , dear-imgui < 3
                     , StateVar
                     , gl < 2
                     , hsnoise < 2

  exposed-modules:     ProgCon
                     , ProgCon.Eval
                     , ProgCon.GUI
                     , ProgCon.Parser
                     , ProgCon.Syntax
  hs-source-dirs:      src
